@@ -3,6 +3,8 @@
 
 1.3.2 2011-??-??
 ========
+ * memory leak on recompile
+ * disassembler fixes and updates for new PHP
  * win32 build fix
  * improve compatibility with ionCube Loader
 
